# delta-lakehouse-vault-trade-company

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  datavault_guideline.md  dev_guideline.md  docker-compose.yaml  jupyter.Dockerfile  pyproject.toml  requirements.txt  requirements_test.txt  run_server.md  setup.py  spark-test.conf  test.Dockerfile
cicd/: pull-code.sh  send_msg.py
configs/: app.yaml  connection.yaml
libs/: meta.py  quality.py  reconcile.py
resources/: abbreviation_suffixes.json  abbreviations.txt  abbreviations_by_jurisdiction.yaml  lookup_jurisdiction.csv  lookup_jurisdiction_with_continents.csv  mapping_verify_jurisdictions.csv  t.txt
samples/: samples.input_resources.bronze.bangladesh.export.txt  samples.input_resources.bronze.bangladesh.import.txt  samples.input_resources.bronze.bangladesh.txt  samples.input_resources.bronze.port.txt  samples.input_resources.bronze.sanction.company.txt  samples.input_resources.bronze.sanction.person.txt  samples.input_resources.raw.sanction.address.txt  samples.input_resources.raw.sanction.company.company.txt  samples.input_resources.raw.sanction.company.organization.txt  samples.input_resources.raw.sanction.entity_link.directorship.txt  samples.input_resources.raw.sanction.entity_link.employment.txt  samples.input_resources.raw.sanction.entity_link.family.txt  samples.input_resources.raw.sanction.entity_link.membership.txt  samples.input_resources.raw.sanction.entity_link.ownership.txt  samples.input_resources.raw.sanction.entity_link.unknownlink.txt  samples.model.bronze.sanction.person.txt  (+6 more)
(+403 files in other folders)
