[build-system]
requires = [
  "setuptools>=61.0",
  "python-dateutil"
]
build-backend = "setuptools.build_meta"

[project]
name = "icttm"
version = "0.0.1"
authors = [
  { name="itccm", email="nguyen.minh@icttm.net" },
]
description = "delta-lakehouse and data modeling"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.pytest.ini_options]
addopts =[
  "-v",
  "--cov=libs"
]

[tool.coverage.report]
skip_empty = true